<resources>
    <string name="app_name">MySecondApp</string>
    <string name="edit_message">Please sign in</string>
    <string name="transform">计算BMI值</string>
    <string name="signIn">请输入身高(单位:M)</string>
    <string name="signIn2">请输入体重(单位:Kg)</string>
    <string name="defaultResult">BMI结果为:</string>
    <string name="defaultResult2">您的健康状况为:</string>

    <string name="defaultBallSubject">TeamA</string>
    <string name="defaultBallSubject2">TeamB</string>
    <string name="add3">加三分</string>
    <string name="add2">加二分</string>
    <string name="add1">加一分</string>
    <string name="reset">reset</string>

    <string name="subjectHint">Please input RMB</string>
    <string name="RMBshow">Hello</string>
    <string name="DOLLAR">DOLLAR</string>
    <string name="EURO">EURO</string>
    <string name="WON">WON</string>
    <string name="Dispacher">Dispacher</string>

    <string name="save">SAVE</string>
    <string name="menu_setting">setting</string>
    <string name="menu_save">save</string>
    <string name="menu_other1">menu_other1</string>
    <string name="app_name1">Hello</string>
    <string name="rate_list2_return">return</string>


</resources>